maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:45: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  setDirection(dir)
  ^PledgeMaze:46: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  estFaceMur() match{
  ^